[package]
name = "covalent-query"
version = "0.1.0"
authors = ["renand3z"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.3", features = ["json"] }
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
tokio = { version = "1.6.1", features = ["full"] }